--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.4.7",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
